# pyduo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  audio_controller.py  chat.py  config.py  types.py  variables.py
